
[metadata]
name = minq_caching_thing
version = 0.0.1
author = Idk Man
author_email = asdfg@hi.jk
description = fsdafsdfdsafdasfds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kuche1/minq-caching-thing
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
